test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/01-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-verify-images
  labels:
    signed: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-verify-images-unprotected
  labels:
    signed: "false"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-ns-selector-policy
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: keyed-basic-rule
    match:
      all:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
            matchExpressions:
            - key: signed
              operator: In
              values:
              - "true"
    verifyImages:
    - imageReferences:
      - "ghcr.io/kyverno/test-verify-image:*"
      attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              url: https://rekor.sigstore.dev
              ignoreTlog: true
