test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-01-apply-2.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    signed: "false"
  name: test-verify-images-unprotected
