test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-01-apply-3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-ns-selector-policy
spec:
  background: false
  failurePolicy: Fail
  rules:
  - match:
      all:
      - resources:
          kinds:
          - Pod
          namespaceSelector:
            matchExpressions:
            - key: signed
              operator: In
              values:
              - "true"
    name: keyed-basic-rule
    verifyImages:
    - attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE8nXRh950IZbRj8Ra/N9sbqOPZrfM
[...]
              -----END PUBLIC KEY-----
            rekor:
              ignoreTlog: true
              url: https://rekor.sigstore.dev
      imageReferences:
      - ghcr.io/kyverno/test-verify-image:*
      validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
