test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/pod-signed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-signed-pod2
  namespace: test-verify-images
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test-signed2
