test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/pod-unsigned.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-unsigned-pod
  namespace: test-verify-images
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: ghcr.io/kyverno/test-verify-image:unsigned
    name: test-unsigned
