test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/02-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-signed-pod
  namespace: test-verify-images
