test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-ns-selector-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
