test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-step-02-assert-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-signed-pod
  namespace: test-verify-images
