test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/03-teststep.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: teststep
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: pod-unsigned.yaml
  - apply:
      file: pod-signed.yaml
  - apply:
      file: pod-unprotected-ns.yaml
