test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-namespace-selector/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: keyed-basic-namespace-selector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2.yaml
    - apply:
        file: chainsaw-step-01-apply-3.yaml
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-unsigned.yaml
    - apply:
        file: pod-signed.yaml
    - apply:
        file: pod-unprotected-ns.yaml
